# pong-sfml

./: .gitignore  CMakeLists.txt  README.md
ext/AtlasSDK/include/atlas/core/math/: constants.h  math.h
ext/AtlasSDK/include/atlas/core/matrix/: mat4.h
ext/AtlasSDK/include/atlas/core/quaternion/: quaternion.h
ext/AtlasSDK/include/atlas/core/transform/: transform.h
ext/AtlasSDK/include/atlas/core/vectors/: vec2.h  vec2i.h  vec3.h  vec3i.h
ext/AtlasSDK/include/atlas/physics/broadphase/: broadphase.h  broadphase2d.h
ext/AtlasSDK/include/atlas/physics/raycast/: raycast.h  raycast2d.h
ext/AtlasSDK/include/atlas/physics/shapes/: shape.h  shape2d.h
ext/AtlasSDK/lib/cmake/atlas/: atlasTargets-debug.cmake  atlasTargets.cmake
src/: main.cpp
src/Conversions/: AtlasConversions.hpp
src/Game/: GameState.cpp  GameState.hpp  GameWindow.hpp  Globals.hpp
src/Game/Audio/: BounceSound.hpp  FailSound.hpp  MusicPlayer.hpp
src/Game/Entities/: Ball.cpp  Ball.hpp  Entity.hpp  GameBorder.cpp  GameBorder.hpp  Paddle.cpp  Paddle.hpp
src/Game/Graphics/: BallShape.hpp  DashedLineShape.hpp  GameBorderShape.hpp  PaddleShape.h
src/Game/UI/: MainScreen.hpp  PongText.hpp  Score.hpp  ScoreScreen.hpp  StartText.hpp
src/System/: EntityManager.cpp  EntityManager.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp
